# ai-book-generator

./: .gitignore  Dockerfile  Makefile  README.md  app.py  convert_to_ebook.py  create_kdp_interior.py  create_s3_reader_user.py  main.py  mvp.ipynb  mvp.py  pyproject.toml  run_tts.py
book_generator/: execute.py  models.py  plan.py  tts.py  tts_batch.py  utils.py
books/fireworks-ru/: back_cover.md  input.txt  plan.yaml
books/how-machines-move-ru/: back_cover.md  kak_mashiny_dvigayutsya.md  plan.yaml
books/metals-pocketbook/: back_cover.md  plan.yaml
books/mir-na-trosakh/: back_cover.md  input.txt  plan.yaml
books/sirens/: back_cover.md  plan.yaml
chapter_based/: README.md  __init__.py  execute.py  models.py  plan.py
scripts/: convert_to_ebook.py  convert_wav_to_mp3.py  create_kdp_cover.py  create_kdp_interior.py  create_s3_reader_user.py  run_tts.py
sirens/: plan.yaml
sirens/.ipynb_checkpoints/: plan-checkpoint.yaml
sirens/part_01/: 01_00_intro.md  01_01_section.md  02_01_section.md  02_04_section.md
sirens/part_02/: 03_00_intro.md  03_03_section.md  04_02_section.md
sirens/part_03/: 05_02_section.md  05_04_section.md  06_00_intro.md  06_01_section.md  06_02_section.md  06_03_section.md  07_01_section.md
sirens/part_04/: 08_00_intro.md  08_02_section.md  08_03_section.md  09_00_intro.md
sirens/part_05/: 10_00_intro.md  10_03_section.md  11_00_intro.md  11_01_section.md  11_02_section.md  11_04_section.md
tests/: test_execution.py  test_executor_output.py  test_integration.py  test_models.py  test_part_label.py  test_utils.py
(+244 files in other folders)
