[project]
name = "ai-book-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.4",
    "google-genai>=1.52.0",
    "openai>=2.8.1",
    "toyaikit>=0.0.8",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = "."
